traversal.zigzag.traversalzigzag.TraversalZigZag.scala.error
Compilation error:
TraversalZigZag:1: error: Missing closing brace `}' assumed here
var x:Int = 0
^TraversalZigZag:1: error: expected class or object definition
var x:Int = 0
^TraversalZigZag:2: error: expected class or object definition
var y:Int = 0
^TraversalZigZag:3: error: expected class or object definition
  var posFin:Boolean = false
  ^TraversalZigZag:5: error: expected start of definition
override def run() {
         ^